--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     var contactInfo = document.getElementById("contact");
     var emailInfo = document.createElement("span");
     var emailLink = document.createElement("a");
-    var emailAddress = "hello" + "@" + "will" + "iamhli" + ".com";
+    var emailAddress = "sarveshtriphathi@gmail.com";
 
     emailLink.href = "mailto:" + emailAddress;
     emailLink.rel = "author";
@@ -68,16 +68,16 @@
 <div id="resume">
   <div id="resume-header">
     <h2>
-      William Li
-      <span class="print-hide">[<a href="/static/resources/WilliamLi_Resume.pdf">PDF</a>]</span>
+      Sarvesh Nandan Tiwari
+      <span class="print-hide">[<a href="/static/resources/Sarvesh_Resume.pdf">PDF</a>]</span>
     </h2>
     <address id="contact">
-      <span>Sunnyvale, CA</span>
+      <span>Noida, India</span>
     </address>
   </div>
   <div id="education">
     <h3>Education</h3>
-    <h4>University of California, Berkeley</h4>
+    <h4>University of IGNOU</h4>
     <p><abbr title="Master of Science">M.S.</abbr>, Computer Science with the Management of Technology Certificate (August 2010 - May 2011)</p>
     <p><abbr title="Bachelor of Science">B.S.</abbr>, Electrical Engineering and Computer Science (August 2007 - May 2010)<span class="print-show">; GPA: 3.80</span></p>
   </div>
