--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">                        
             <li><a href="/resume/">Resume</a></li>
-            <li><a href="/#contact">Contact</a></li>
+            <li><a href="/resume/#contact">Contact</a></li>
           </ul>
         </div>
       </div>
