--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
   <div id="education">
     <h3>Education</h3>
     <h4>University of IGNOU</h4>
-    <p><abbr title="Master of Computer Applications">M.C.A </abbr>(Master of Computer Application), Computer Science and Engineering. </p>
-    <p><abbr title="Bachelor of Computer Applications">B.C.A </abbr>(Bachelor of Computer Application), Computer Science and Engineering. </p>
+    <p>M.C.A (Master of Computer Application), Computer Science and Engineering. </p>
+    <p>B.C.A (Bachelor of Computer Application), Computer Science and Engineering. </p>
   </div>
   <div id="work">
     <h3>Work Experience</h3>
